k8s/app-worker-beat-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: beat-dev
  labels:
    app: stormpiper-dev

spec:
  replicas: 1
  selector:
    matchLabels:
      app: stormpiper-dev
  template:
    metadata:
      labels:
        app: stormpiper-dev
    spec:
      containers:
        - name: beat-dev
          image: bg_worker:latest
          command:
            - /run-beat.sh
          imagePullPolicy: IfNotPresent
