k8s/app-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: worker
  labels:
    app: stormpiper

spec:
  replicas: 1
  selector:
    matchLabels:
      app: stormpiper
  template:
    metadata:
      labels:
        app: stormpiper
    spec:
      containers:
        - name: worker
          image: bg_worker:latest
          command:
            - /run-worker.sh
          imagePullPolicy: IfNotPresent
